fix: remove vertical margins in name label

--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -110,6 +110,15 @@
           <enum>QFrame::Raised</enum>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
+          <property name="topMargin">
+           <number>0</number>
+          </property>
+          <property name="bottomMargin">
+           <number>0</number>
+          </property>
+          <property name="verticalSpacing">
+           <number>0</number>
+          </property>
           <item row="0" column="0">
            <widget class="QLabel" name="policyNameLabel">
             <property name="sizePolicy">
