fix: update widget frame

--- a/src/gui/contentwidget.ui
+++ b/src/gui/contentwidget.ui
@@ -120,6 +120,15 @@
        </property>
        <item row="0" column="0">
         <widget class="QScrollArea" name="scrollArea">
+         <property name="frameShape">
+          <enum>QFrame::NoFrame</enum>
+         </property>
+         <property name="frameShadow">
+          <enum>QFrame::Plain</enum>
+         </property>
+         <property name="lineWidth">
+          <number>0</number>
+         </property>
          <property name="widgetResizable">
           <bool>true</bool>
          </property>
@@ -128,8 +137,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>734</width>
-            <height>593</height>
+            <width>736</width>
+            <height>595</height>
            </rect>
           </property>
          </widget>
