--- a/src/plugins/administrative_templates/translations.qrc
+++ b/src/plugins/administrative_templates/translations.qrc
@@ -1,6 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
  <qresource prefix="/">
-  <file>common_translation_en.qm</file>
-  <file>common_translation_ru.qm</file>
+  <file>administrative_templates_common_translation_en.qm</file>
+  <file>administrative_templates_common_translation_ru.qm</file>
  </qresource>
 </RCC>
