--- a/src/plugins/preferences/common/propertieswidget.ui
+++ b/src/plugins/preferences/common/propertieswidget.ui
@@ -26,6 +26,9 @@
    </item>
    <item>
     <widget class="QFrame" name="propertiesFrame">
+     <property name="enabled">
+      <bool>true</bool>
+     </property>
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
@@ -128,6 +131,9 @@
       </item>
       <item row="3" column="0">
        <widget class="QLabel" name="applyOnceLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>6</horstretch>
@@ -144,6 +150,9 @@
       </item>
       <item row="3" column="1">
        <widget class="QLabel" name="applyOnceStatusLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -157,6 +166,9 @@
       </item>
       <item row="4" column="0">
        <widget class="QLabel" name="filteredDirectlyLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>6</horstretch>
@@ -173,6 +185,9 @@
       </item>
       <item row="4" column="1">
        <widget class="QLabel" name="filteredDirectlyStatusLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -186,6 +201,9 @@
       </item>
       <item row="5" column="0">
        <widget class="QLabel" name="filteredByAncestorLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>6</horstretch>
@@ -202,6 +220,9 @@
       </item>
       <item row="5" column="1">
        <widget class="QLabel" name="filteredByAncestorStatusLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -215,6 +236,9 @@
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="disabledDirectlyLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>6</horstretch>
@@ -231,6 +255,9 @@
       </item>
       <item row="6" column="1">
        <widget class="QLabel" name="disabledDirectlyStatusLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
@@ -244,6 +271,9 @@
       </item>
       <item row="7" column="0">
        <widget class="QLabel" name="disabledByAncestorLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>6</horstretch>
@@ -260,6 +290,9 @@
       </item>
       <item row="7" column="1">
        <widget class="QLabel" name="disabledByAncestorStatusLabel">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>1</horstretch>
