--- a/src/plugins/preferences/common/tabledetailswidget.ui
+++ b/src/plugins/preferences/common/tabledetailswidget.ui
@@ -54,7 +54,7 @@
         <number>0</number>
        </property>
        <item>
-        <widget class="QTreeView" name="treeView">
+        <widget class="preferences::PreferencesTreeView" name="treeView">
          <property name="sortingEnabled">
           <bool>true</bool>
          </property>
@@ -72,6 +72,11 @@
    <extends>QWidget</extends>
    <header>common/propertieswidget.h</header>
    <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>preferences::PreferencesTreeView</class>
+   <extends>QTreeView</extends>
+   <header location="global">common/preferencestreeview.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
