feat: hide information on preference when it is not selected

--- a/src/plugins/preferences/common/tabledetailswidget.ui
+++ b/src/plugins/preferences/common/tabledetailswidget.ui
@@ -55,6 +55,9 @@
        </property>
        <item>
         <widget class="preferences::PreferencesTreeView" name="treeView">
+         <property name="focusPolicy">
+          <enum>Qt::NoFocus</enum>
+         </property>
          <property name="sortingEnabled">
           <bool>true</bool>
          </property>
