--- a/src/plugins/scripts/translations.qrc
+++ b/src/plugins/scripts/translations.qrc
@@ -1,6 +1,8 @@
 <!DOCTYPE RCC><RCC version="1.0">
  <qresource prefix="/">
-  <file>scripts_ru.qm</file>
-  <file>scrpits_en.qm</file>
+  <file>scripts_2ru.qm</file>
+  <file>scripts_en.qm</file>
+  <file>scripts_pl.qm</file>
+  <file>scripts_zh.qm</file>
  </qresource>
 </RCC>
