--- a/src/plugins/scripts/scriptscontentwidget.ui
+++ b/src/plugins/scripts/scriptscontentwidget.ui
@@ -32,15 +32,12 @@
    <property name="verticalSpacing">
     <number>6</number>
    </property>
-   <item row="1" column="0">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   <item row="0" column="0">
+    <widget class="QListView" name="listView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
      </property>
     </widget>
-   </item>
-   <item row="0" column="0">
-    <widget class="QListView" name="listView"/>
    </item>
   </layout>
  </widget>
