--- a/src/plugins/preferences/shortcuts/shortcutswidget.ui
+++ b/src/plugins/preferences/shortcuts/shortcutswidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>384</width>
-    <height>482</height>
+    <height>496</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -427,7 +427,7 @@
        <widget class="QComboBox" name="locationComboBox">
         <item>
          <property name="text">
-          <string>&lt;Specify full path&gt;</string>
+          <string>[Specify full path]</string>
          </property>
         </item>
         <item>
