--- a/src/plugins/preferences/common/tabledetailswidget.ui
+++ b/src/plugins/preferences/common/tabledetailswidget.ui
@@ -61,6 +61,9 @@
          <property name="sortingEnabled">
           <bool>true</bool>
          </property>
+         <attribute name="headerShowSortIndicator" stdset="0">
+          <bool>false</bool>
+         </attribute>
         </widget>
        </item>
       </layout>
