--- a/src/gui/mainwindow.ui
+++ b/src/gui/mainwindow.ui
@@ -32,7 +32,7 @@
       <property name="orientation">
        <enum>Qt::Horizontal</enum>
       </property>
-      <widget class="QWidget" name="">
+      <widget class="QWidget" name="layoutWidget">
        <layout class="QVBoxLayout" name="verticalLayout">
         <item>
          <widget class="QLineEdit" name="searchLineEdit">
@@ -93,7 +93,7 @@
      <x>0</x>
      <y>0</y>
      <width>995</width>
-     <height>22</height>
+     <height>19</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
@@ -110,6 +110,8 @@
      <string>&amp;View</string>
     </property>
     <addaction name="actionLanguage"/>
+    <addaction name="actionEditFilter"/>
+    <addaction name="actionEnableFilter"/>
    </widget>
    <widget class="QMenu" name="menu_Help">
     <property name="title">
@@ -308,6 +310,19 @@
   <action name="actionManual">
    <property name="text">
     <string>&amp;Manual</string>
+   </property>
+  </action>
+  <action name="actionEditFilter">
+   <property name="text">
+    <string>&amp;Edit filter</string>
+   </property>
+  </action>
+  <action name="actionEnableFilter">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>&amp;Enable filter</string>
    </property>
   </action>
  </widget>
